project/stage/tests/accept/empty_functions/w_params/multiple_params/string_func_void_int_params.ul
string f12345098_234fXx_ (void askj_234wf, int D0_1234Kkk) { }
