project/stage/tests/reject/bad_statements/bad_return_statements/return_var_decl.ul
int F() {
    return void temp;
}
